Closed Bug 826423 Opened 11 years ago Closed 11 years ago

Fix SpecialPowers.wrap() to reliably detect xrays

Categories

(Testing :: Mochitest, defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla20

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

Details

Attachments

(1 file)

Right now SpecialPowers detects Xrays via a weird toString hack.  We should stop doing that.
Assignee: nobody → bzbarsky
Whiteboard: [need review]
Attachment #697634 - Flags: review?(peterv) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/c75726a3b181
Flags: in-testsuite-
Whiteboard: [need review]
Target Milestone: --- → mozilla20
https://hg.mozilla.org/mozilla-central/rev/c75726a3b181
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: