Bug 826423.  Fix SpecialPowers.wrap() to reliably detect Xrays.  r=peterv